// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteUtils gen no write stub 1`] = `
Object {
  "6844bb76-df3e-4bb4-adea-49979cdc7d8a": Object {
    "body": "",
    "children": Array [
      "foobar.ch1",
    ],
    "created": 1608579532616,
    "custom": Object {
      "nav_order": 1,
    },
    "data": Object {},
    "desc": "",
    "fname": "foobar",
    "id": "6844bb76-df3e-4bb4-adea-49979cdc7d8a",
    "links": Array [],
    "parent": null,
    "stub": true,
    "title": "Foobar",
    "type": "note",
    "updated": 1608579532616,
    "vault": Object {
      "fsPath": "vault1",
    },
  },
  "foo": Object {
    "body": "foo body
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {
      "nav_order": 0,
      "permalink": "/",
    },
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": null,
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
  "foo.ch1": Object {
    "body": "foo.ch1 body
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
  "foobar.ch1": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foobar.ch1",
    "id": "foobar.ch1",
    "links": Array [],
    "parent": "6844bb76-df3e-4bb4-adea-49979cdc7d8a",
    "title": "Ch1",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
}
`;

exports[`SiteUtils gen no write stub 2`] = `
Array [
  "bar.md",
  "foo.ch1.md",
  "foo.md",
  "foo.schema.yml",
  "foobar.ch1.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`SiteUtils gen write stub 1`] = `
Object {
  "8c064797-e7d5-4b79-8fa5-ac0663ffbe1f": Object {
    "body": "",
    "children": Array [
      "foobar.ch1",
    ],
    "created": 1608579532581,
    "custom": Object {
      "nav_order": 1,
    },
    "data": Object {},
    "desc": "",
    "fname": "foobar",
    "id": "8c064797-e7d5-4b79-8fa5-ac0663ffbe1f",
    "links": Array [],
    "parent": null,
    "stub": false,
    "title": "Foobar",
    "type": "note",
    "updated": 1608579532581,
    "vault": Object {
      "fsPath": "vault1",
    },
  },
  "foo": Object {
    "body": "foo body
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {
      "nav_order": 0,
      "permalink": "/",
    },
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": null,
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
  "foo.ch1": Object {
    "body": "foo.ch1 body
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
  "foobar.ch1": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foobar.ch1",
    "id": "foobar.ch1",
    "links": Array [],
    "parent": "8c064797-e7d5-4b79-8fa5-ac0663ffbe1f",
    "title": "Ch1",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
}
`;

exports[`SiteUtils gen write stub 2`] = `
Array [
  "bar.md",
  "foo.ch1.md",
  "foo.md",
  "foo.schema.yml",
  "foobar.ch1.md",
  "foobar.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`SiteUtils per note config blacklist note 1`] = `
Object {
  "foo": Object {
    "body": "foo body
",
    "children": Array [],
    "created": "1",
    "custom": Object {
      "nav_order": 0,
      "permalink": "/",
    },
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": null,
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
}
`;

exports[`SiteUtils per note config nav_exclude 1`] = `
Object {
  "foo": Object {
    "body": "foo body
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {
      "nav_order": 0,
      "permalink": "/",
    },
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": null,
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
  "foo.ch1": Object {
    "body": "foo.ch1 body
",
    "children": Array [],
    "created": "1",
    "custom": Object {
      "nav_exclude": true,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
}
`;
